--- a/src/mzmath/MwtWinDll/MwtWinDll/MwtWinDll.vbproj
+++ b/src/mzmath/MwtWinDll/MwtWinDll/MwtWinDll.vbproj
@@ -201,10 +201,11 @@
     <DocumentationFile>PNL.OMICS.MwtWinDll.xml</DocumentationFile>
     <WarningLevel>1</WarningLevel>
     <NoWarn>42353,42354,42355</NoWarn>
-    <DebugType>pdbonly</DebugType>
+    <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <RemoveIntegerChecks>true</RemoveIntegerChecks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'mzkit|x86'">
     <DebugSymbols>true</DebugSymbols>
