--- a/src/mzmath/MwtWinDll/MwtWinDll/MwtWinDll.vbproj
+++ b/src/mzmath/MwtWinDll/MwtWinDll/MwtWinDll.vbproj
@@ -11,7 +11,7 @@
     </ApplicationIcon>
     <AssemblyKeyContainerName>
     </AssemblyKeyContainerName>
-    <AssemblyName>PNL.OMICS.MwtWinDll</AssemblyName>
+    <AssemblyName>PNNL.OMICS.MwtWinDll</AssemblyName>
     <AssemblyOriginatorKeyFile>
     </AssemblyOriginatorKeyFile>
     <AssemblyOriginatorKeyMode>None</AssemblyOriginatorKeyMode>
@@ -23,7 +23,7 @@
     <OptionCompare>Binary</OptionCompare>
     <OptionExplicit>On</OptionExplicit>
     <OptionStrict>On</OptionStrict>
-    <RootNamespace>PNL.OMICS.MwtWinDll</RootNamespace>
+    <RootNamespace>PNNL.OMICS.MwtWinDll</RootNamespace>
     <StartupObject>
     </StartupObject>
     <FileUpgradeFlags>
@@ -37,7 +37,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>bin\</OutputPath>
-    <DocumentationFile>PNL.OMICS.MwtWinDll.xml</DocumentationFile>
+    <DocumentationFile>PNNL.OMICS.MwtWinDll.xml</DocumentationFile>
     <BaseAddress>285212672</BaseAddress>
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
@@ -57,7 +57,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>bin\</OutputPath>
-    <DocumentationFile>PNL.OMICS.MwtWinDll.xml</DocumentationFile>
+    <DocumentationFile>PNNL.OMICS.MwtWinDll.xml</DocumentationFile>
     <BaseAddress>285212672</BaseAddress>
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
@@ -85,7 +85,7 @@
     <OutputPath>bin\x64\Debug\</OutputPath>
     <DefineConstants>Win32 = True</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>PNL.OMICS.MwtWinDll.xml</DocumentationFile>
+    <DocumentationFile>PNNL.OMICS.MwtWinDll.xml</DocumentationFile>
     <WarningLevel>1</WarningLevel>
     <NoWarn>42353,42354,42355</NoWarn>
     <DebugType>full</DebugType>
@@ -99,7 +99,7 @@
     <OutputPath>bin\x64\Release\</OutputPath>
     <DefineConstants>Win32 = True</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>PNL.OMICS.MwtWinDll.xml</DocumentationFile>
+    <DocumentationFile>PNNL.OMICS.MwtWinDll.xml</DocumentationFile>
     <WarningLevel>1</WarningLevel>
     <NoWarn>42353,42354,42355</NoWarn>
     <DebugType>pdbonly</DebugType>
@@ -114,7 +114,7 @@
     <OutputPath>bin\x86\Debug\</OutputPath>
     <DefineConstants>Win32 = True</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>PNL.OMICS.MwtWinDll.xml</DocumentationFile>
+    <DocumentationFile>PNNL.OMICS.MwtWinDll.xml</DocumentationFile>
     <WarningLevel>1</WarningLevel>
     <NoWarn>42353,42354,42355</NoWarn>
     <DebugType>full</DebugType>
@@ -128,7 +128,7 @@
     <OutputPath>bin\x86\Release\</OutputPath>
     <DefineConstants>Win32 = True</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>PNL.OMICS.MwtWinDll.xml</DocumentationFile>
+    <DocumentationFile>PNNL.OMICS.MwtWinDll.xml</DocumentationFile>
     <WarningLevel>1</WarningLevel>
     <NoWarn>42353,42354,42355</NoWarn>
     <DebugType>pdbonly</DebugType>
@@ -142,7 +142,7 @@
     <OutputPath>bin\Biodeep\</OutputPath>
     <DefineConstants>Win32 = True</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>PNL.OMICS.MwtWinDll.xml</DocumentationFile>
+    <DocumentationFile>PNNL.OMICS.MwtWinDll.xml</DocumentationFile>
     <WarningLevel>1</WarningLevel>
     <NoWarn>42353,42354,42355</NoWarn>
     <DebugType>pdbonly</DebugType>
@@ -156,7 +156,7 @@
     <OutputPath>bin\x64\Biodeep\</OutputPath>
     <DefineConstants>Win32 = True</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>PNL.OMICS.MwtWinDll.xml</DocumentationFile>
+    <DocumentationFile>PNNL.OMICS.MwtWinDll.xml</DocumentationFile>
     <WarningLevel>1</WarningLevel>
     <NoWarn>42353,42354,42355</NoWarn>
     <DebugType>pdbonly</DebugType>
@@ -170,7 +170,7 @@
     <OutputPath>..\..\..\smartnucl_integrative\biodeepDB\METLINApp\plot\bin\x86\Biodeep\</OutputPath>
     <DefineConstants>Win32 = True</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>PNL.OMICS.MwtWinDll.xml</DocumentationFile>
+    <DocumentationFile>PNNL.OMICS.MwtWinDll.xml</DocumentationFile>
     <WarningLevel>1</WarningLevel>
     <NoWarn>42353,42354,42355</NoWarn>
     <DebugType>pdbonly</DebugType>
@@ -184,7 +184,7 @@
     <OutputPath>bin\mzkit\</OutputPath>
     <DefineConstants>Win32 = True</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>PNL.OMICS.MwtWinDll.xml</DocumentationFile>
+    <DocumentationFile>PNNL.OMICS.MwtWinDll.xml</DocumentationFile>
     <WarningLevel>1</WarningLevel>
     <NoWarn>42353,42354,42355</NoWarn>
     <DebugType>pdbonly</DebugType>
@@ -198,7 +198,7 @@
     <OutputPath>bin\x64\mzkit\</OutputPath>
     <DefineConstants>Win32 = True</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>PNL.OMICS.MwtWinDll.xml</DocumentationFile>
+    <DocumentationFile>PNNL.OMICS.MwtWinDll.xml</DocumentationFile>
     <WarningLevel>1</WarningLevel>
     <NoWarn>42353,42354,42355</NoWarn>
     <DebugType>full</DebugType>
@@ -213,7 +213,7 @@
     <OutputPath>bin\x86\mzkit\</OutputPath>
     <DefineConstants>Win32 = True</DefineConstants>
     <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>PNL.OMICS.MwtWinDll.xml</DocumentationFile>
+    <DocumentationFile>PNNL.OMICS.MwtWinDll.xml</DocumentationFile>
     <WarningLevel>1</WarningLevel>
     <NoWarn>42353,42354,42355</NoWarn>
     <DebugType>pdbonly</DebugType>
