--- a/src/mzmath/mz_deco/mz_deco.vbproj
+++ b/src/mzmath/mz_deco/mz_deco.vbproj
@@ -64,7 +64,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.vb" />
+    <Compile Include="Deconvolution.vb" />
+    <Compile Include="PeakFeature.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
