--- a/src/assembly/assembly/assembly.vbproj
+++ b/src/assembly/assembly/assembly.vbproj
@@ -269,6 +269,8 @@
     <Compile Include="ASCII\MGF\Ions.vb" />
     <Compile Include="ASCII\MGF\MgfWriter.vb" />
     <Compile Include="ASCII\MGF\MgfReader.vb" />
+    <Compile Include="ASCII\MSL\FileReader.vb" />
+    <Compile Include="ASCII\MSL\MSL.vb" />
     <Compile Include="ASCII\MSN\FileReader.vb" />
     <Compile Include="ASCII\MSN\PeakTable.vb" />
     <Compile Include="ASCII\MSN\MsnList.vb" />
