--- a/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
+++ b/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
@@ -199,6 +199,7 @@
     <Compile Include="MRM\Data\NamespaceDoc.vb" />
     <Compile Include="MRM\Data\MRMStandards.vb" />
     <Compile Include="MRM\IonPair.vb" />
+    <Compile Include="MRM\QuantitativeAnalysis\RTAlignment.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\MRMArguments.vb" />
     <Compile Include="MRM\QuantitativeAnalysis\QuantificationWorker.vb" />
     <Compile Include="QuantitativeAnalysis\ContentUnits.vb" />
