read kegg reaction class as table

--- a/src/metadna/MetaDNA_visual/MetaDNA_visual.vbproj
+++ b/src/metadna/MetaDNA_visual/MetaDNA_visual.vbproj
@@ -106,6 +106,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ReactionClass.vb" />
     <Compile Include="Extensions.vb" />
     <Compile Include="viz.vb" />
     <Compile Include="XML.vb" />
