--- a/src/metadb/Massbank/Massbank.vbproj
+++ b/src/metadb/Massbank/Massbank.vbproj
@@ -300,6 +300,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Public\NCBI\PubChemDescriptorRepo.vb" />
     <Compile Include="SDFExtensions.vb" />
     <Compile Include="MetaLib\Match\ComparesIdXrefInteger.vb" />
     <Compile Include="MetaLib\Match\SynonymIndex.vb" />
