--- a/src/metadb/pubchem/pubchem.vbproj
+++ b/src/metadb/pubchem/pubchem.vbproj
@@ -84,7 +84,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Biodeep|x64'">
     <DefineTrace>true</DefineTrace>
-    <OutputPath>..\..\App\</OutputPath>
+    <OutputPath>..\..\..\dist\bin\</OutputPath>
     <DocumentationFile>pubchem.xml</DocumentationFile>
     <Optimize>false</Optimize>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
