--- a/src/metadb/FooDB/FooDB.vbproj
+++ b/src/metadb/FooDB/FooDB.vbproj
@@ -10,8 +10,9 @@
     <AssemblyName>SMRUCC.MassSpectrum.DATA.FooDB</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
