--- a/src/mzmath/mz_deco/mz_deco.vbproj
+++ b/src/mzmath/mz_deco/mz_deco.vbproj
@@ -130,6 +130,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Deconvolution.vb" />
+    <Compile Include="PeakAlignment.vb" />
     <Compile Include="PeakFeature.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
