--- a/src/assembly/assembly/assembly.vbproj
+++ b/src/assembly/assembly/assembly.vbproj
@@ -277,7 +277,9 @@
     <Compile Include="ASCII\MSP\MspParser.vb" />
     <Compile Include="ASCII\MSP\Comments.vb" />
     <Compile Include="ASCII\MSP\MspData.vb" />
-    <Compile Include="MarkupData\mzML\XML\FileComponents.vb" />
+    <Compile Include="MarkupData\mzML\XML\BinaryData.vb" />
+    <Compile Include="MarkupData\mzML\XML\Ions.vb" />
+    <Compile Include="MarkupData\mzML\XML\Components.vb" />
     <Compile Include="NamespaceDoc.vb" />
     <Compile Include="SpectrumTree.vb" />
     <Compile Include="MarkupData\IBase64Container.vb" />
