--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,4 @@ paket-files/
 /Rscript/R/compound_brites/.R_logs
 /src/assembly/Apps
 /Rscript/biodeep/biodeepdb_v3/Rscript/R
+dist/Rscript/raw/UVtest.cdf
