--- a/src/metadb/Chemoinformatics/Chemoinformatics.vbproj
+++ b/src/metadb/Chemoinformatics/Chemoinformatics.vbproj
@@ -178,6 +178,7 @@
     <Compile Include="InChI\InChI.vb" />
     <Compile Include="InChI\InChIKey.vb" />
     <Compile Include="InChI\Layers.vb" />
+    <Compile Include="Extensions.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
