split source file

--- a/src/mzmath/ms2_math-core/MassSpectrum.math-core.vbproj
+++ b/src/mzmath/ms2_math-core/MassSpectrum.math-core.vbproj
@@ -277,6 +277,7 @@
     <Compile Include="Extensions.vb" />
     <Compile Include="Ms1\Ms1FeatureExtensions.vb" />
     <Compile Include="Ms1\PolarityData.vb" />
+    <Compile Include="Ms1\PrecursorType\Class1.vb" />
     <Compile Include="Ms1\PrecursorType\Extensions.vb" />
     <Compile Include="Ms1\PrecursorType\Formula\Negative.vb" />
     <Compile Include="Ms1\PrecursorType\Formula\Positive.vb" />
