--- a/src/mzmath/ms2_math-core/MassSpectrum.math-core.vbproj
+++ b/src/mzmath/ms2_math-core/MassSpectrum.math-core.vbproj
@@ -282,7 +282,7 @@
     <Compile Include="Ms1\PrecursorType\Formula\Negative.vb" />
     <Compile Include="Ms1\PrecursorType\Formula\Positive.vb" />
     <Compile Include="Ms1\PrecursorType\Provider.vb" />
-    <Compile Include="Ms1\PrecursorType\MolWeight.vb" />
+    <Compile Include="Ms1\PrecursorType\ExactMass.vb" />
     <Compile Include="Ms1\PrecursorType\MzCalculator.vb" />
     <Compile Include="Ms1\Tolerance\PPM.vb" />
     <Compile Include="Ms1\Tolerance\DeltaMass.vb" />
