improvements of the molecule networking tools api

--- a/src/mzkit/Task/Task.vbproj
+++ b/src/mzkit/Task/Task.vbproj
@@ -88,6 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Math.vb" />
+    <Compile Include="MoleculeNetworking.vb" />
     <Compile Include="SpectrumProperty.vb" />
     <Compile Include="Raw.vb" />
     <Compile Include="ImportsRawData.vb" />
